<resources>
    <string name="app_name">Calculator</string>
    <string name="button_name">+</string>
    <string name="button_name1">-</string>
    <string name="button_name2">×</string>
    <string name="button_name3">÷</string>
    <string name="button_name4">%</string>
    <string name="textView">Введите числа</string>
    <string name="clear">CE</string>
    <string name="digit1">Первое число</string>
    <string name="digit2">Второе число</string>

</resources>