<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:backgroundTint="@color/blue"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/resultTextView2"
        android:layout_width="0sp"
        android:layout_height="100sp"
        android:background="@color/blue2"
        android:backgroundTint="@color/blue2"
        android:fontFamily="@font/montserrat_bold"
        android:lineSpacingExtra="0dp"
        android:padding="20sp"
        android:text="@string/textView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="190dp"
        android:backgroundTint="@color/blue2"
        android:duplicateParentState="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="24dp"
        android:scrollbarDefaultDelayBeforeFade="20"
        android:scrollbarFadeDuration="10"
        android:scrollbarSize="0dp"
        android:text="@string/button_name2"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:cornerRadius="0sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/black"
        app:strokeWidth="4sp"
        tools:ignore="MissingConstraints,RtlSymmetry,VisualLintButtonSize" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue2"
        android:duplicateParentState="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="24dp"
        android:scrollbarDefaultDelayBeforeFade="20"
        android:scrollbarFadeDuration="10"
        android:scrollbarSize="0dp"
        android:text="@string/button_name1"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:cornerRadius="0sp"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:strokeColor="@color/black"
        app:strokeWidth="4sp"
        tools:ignore="MissingConstraints,RtlSymmetry,VisualLintButtonSize,VisualLintOverlap" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue2"
        android:duplicateParentState="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="24dp"
        android:scrollbarDefaultDelayBeforeFade="20"
        android:scrollbarFadeDuration="10"
        android:scrollbarSize="0dp"
        android:text="@string/button_name4"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:cornerRadius="0sp"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        app:strokeColor="@color/black"
        app:strokeWidth="4sp"
        tools:ignore="MissingConstraints,RtlSymmetry,VisualLintButtonSize,VisualLintOverlap" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120sp"
        android:layout_height="100sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="190dp"
        android:backgroundTint="@color/blue2"
        android:duplicateParentState="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="24dp"
        android:scrollbarDefaultDelayBeforeFade="20"
        android:scrollbarFadeDuration="10"
        android:scrollbarSize="0dp"
        android:text="@string/button_name3"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:cornerRadius="0sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_clear"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/black"
        app:strokeWidth="4sp"
        tools:ignore="MissingConstraints,RtlSymmetry,VisualLintButtonSize" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="0sp"
        android:layout_height="100sp"
        android:background="@color/blue2"
        android:backgroundTint="@color/blue2"
        android:fontFamily="@font/montserrat_bold"
        android:lineSpacingExtra="0dp"
        android:padding="4sp"
        android:text="@string/textView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/blue2"
        android:duplicateParentState="true"
        android:insetTop="0dp"
        android:insetBottom="0sp"
        android:paddingStart="24dp"
        android:scrollbarDefaultDelayBeforeFade="20"
        android:scrollbarFadeDuration="10"
        android:scrollbarSize="0sp"
        android:text="@string/button_name"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:cornerRadius="0sp"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:strokeColor="@color/black"
        app:strokeWidth="4sp"
        tools:ignore="RtlSymmetry,VisualLintButtonSize" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="150sp"
        android:layout_height="70sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="250sp"
        android:layout_marginBottom="500dp"
        android:autofillHints=""
        android:ems="6"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/digit1"
        android:inputType="numberDecimal"
        android:minHeight="48sp"
        android:shadowColor="@color/blue2"
        android:textAlignment="center"
        android:textColor="@color/blue2"
        android:textColorHighlight="@color/blue2"
        android:textColorHint="@color/blue2"
        android:textColorLink="@color/blue2"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView"
        tools:ignore="LabelFor,VisualLintOverlap" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="150sp"
        android:layout_height="70sp"
        android:layout_marginStart="250sp"
        android:layout_marginTop="60sp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="500dp"
        android:autofillHints=""
        android:ems="6"
        android:fontFamily="@font/montserrat_bold"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/digit2"
        android:inputType="numberDecimal"
        android:minHeight="48sp"
        android:shadowColor="@color/black"
        android:textAlignment="center"
        android:textColor="@color/blue2"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/blue2"
        android:textColorLink="@color/black"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="120sp"
        android:layout_height="100sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="190dp"
        android:backgroundTint="@color/blue2"
        android:insetLeft="0dp"
        android:insetTop="0sp"
        android:insetRight="0dp"
        android:insetBottom="0sp"
        android:scrollbarSize="20dp"
        android:text="@string/clear"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:cornerRadius="0sp"
        app:iconPadding="0sp"
        app:iconSize="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/black"
        app:strokeWidth="4sp"
        tools:ignore="VisualLintButtonSize"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0sp"
        android:layout_height="100sp"
        android:layout_marginTop="70dp"
        android:background="@color/blue2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>